# almanac

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.md  collect_reduced_metadata.py  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish.yml  release.yml
docs/: Makefile  README.md  api-reference.md  cli-reference.md  conf.py  configuration.md  data-formats.md  development.md  faq.md  index.rst  installation.md  requirements.txt  setup_rtd.md  test_docs.py  user-guide.md
docs/_static/: .gitkeep
docs/api/: almanac.rst  modules.rst
docs/examples/: README.md  daily-monitoring.md
python/almanac/: apogee.py  cli.py  config.py  database.py  io.py  utils.py
python/almanac/models/: apogee.py  base.py  fields.py  utils.py
sandbox/: get_ap3d_meta.py
src/almanac/: __init__.py  apogee.py  catalog.py  cli.py  config.py  data_models.py  database.py  display.py  io.py  logger.py  plugmap_models.py  qa.py  utils.py
src/almanac/data_models/: __init__.py  exposure.py  fps.py  metadata.py  plate.py  target.py  types.py  utils.py
src/almanac/etc/: bad_exposures.csv
src/almanac/stash/: plugmap_models.py
