[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdss-almanac"
version = "0.2.8"
authors = [
    { name = "Andy Casey", email = "andrew.casey@monash.edu" }
]
description = "Everything we've got"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy",
    "astropy",
    "h5py",
    "tqdm",
    "click",
    "pydl",
    "sdssdb",
    "colorlog",
    "rich",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/sdss/almanac"
Documentation = "https://sdss-almanac.readthedocs.org"
Repository = "https://github.com/sdss/almanac"

[project.optional-dependencies]
dev = [
    "ipython>=7.9.0",
    "matplotlib>=3.1.1",
    "flake8>=3.7.9",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "isort>=4.3.21",
    "codecov>=2.0.15",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "invoke>=1.3.0",
    "twine>=3.1.1",
    "wheel>=0.33.6",
    "sphinx>=3.0.0"
]
docs = [
    "Sphinx>=5.0.0,<8.0.0",
    "furo>=2023.3.27",
    "sphinx-autodoc-typehints>=1.12.0",
    "myst-parser>=0.18.0",
    "sphinxcontrib-bibtex>=2.4.0",
    "sphinx-copybutton>=0.5.0",
    "linkify-it-py"
]

[project.scripts]
almanac = "almanac.cli:main"

[tool.uv]
package = true

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["almanac*"]

[tool.setuptools.package-data]
almanac = ["etc/*"]

[tool.isort]
line_length = 79
known_first_party = ["almanac"]
known_sdss_party = ["sdssdb", "sdsstools"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.flake8]
ignore = ["H101", "E722", "W504", "W505"]
per-file-ignores = ["*/__init__.py:E,W"]
max-line-length = 99

[tool.pytest.ini_options]
addopts = "--cov almanac --cov-report html -W ignore"

[tool.coverage.run]
branch = true
include = ["src/almanac/*"]
omit = ["*/utils/*.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = []
